remove ratchet framework and fixing deps causes'

--- a/app/mobile/hotels.html
+++ b/app/mobile/hotels.html
@@ -59,44 +59,51 @@
         <div class="clearfix"></div>
       </div>
       <div id="main-wrap" class="pos-rlt">
-        <div class="top-banner home">
-          <h3 class="banner-title text-u-c text-center">Don’t miss our lebaran promo</h3>
+        <div class="top-banner hotels"><span class="block text-center m-b-xs m-t-md"><i class="ico ico-mobile ico-hotel-md"></i></span>
+          <h3 class="banner-title text-u-c text-center">Top Hotel Destinations</h3>
+          <h5 class="subtitle text-u-c text-center">Why Book with sapta Tours?</h5>
         </div>
         <div class="featured-destination-list">
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Turkey.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Kilamanjaru.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Turkey Adventure</h4><span class="inline location">MIddle East</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+              <h4 class="name text-lg">Surabaya</h4><span class="inline count-accomodations">125</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Japan.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Tokyo.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Japanese Essentials</h4><span class="inline location">Asia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1500</span></span>
+              <h4 class="name text-lg">Tokyo</h4><span class="inline count-accomodations">185</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/pucket.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Bali-02.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Bangkok Phuket</h4><span class="inline location">Asia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+              <h4 class="name text-lg">Bali</h4><span class="inline count-accomodations">205</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/France.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Singapore.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">French Riviera</h4><span class="inline location">Europe</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 3000</span></span>
+              <h4 class="name text-lg">Singapore</h4><span class="inline count-accomodations">145</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/China.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Hongkong.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Asia Delight</h4><span class="inline location">China</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1000</span></span>
+              <h4 class="name text-lg">Hongkong</h4><span class="inline count-accomodations">85</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Jawa.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/london.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Karimun Jawa Experience</h4><span class="inline location">Indonesia</span><span class="inline m-r-xs m-l-xs">|</span><span class="inline">From &nbsp;<span class="f-bold">USD 1500</span></span>
+              <h4 class="name text-lg">London</h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
+            </div>
+          </div>
+          <div class="item pos-rlt b-b">
+            <figure class="pos-abt"><img src="img/destinations/Paris.jpg" alt=""/></figure>
+            <div class="featured-info pos-abt">
+              <h4 class="name text-lg">Paris</h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
             </div>
           </div>
         </div>
