flights landing page

--- a/app/mobile/flights.html
+++ b/app/mobile/flights.html
@@ -59,51 +59,58 @@
         <div class="clearfix"></div>
       </div>
       <div id="main-wrap" class="pos-rlt">
-        <div class="top-banner hotels"><span class="block text-center m-b-xs m-t-md"><i class="ico ico-mobile ico-hotel-md"></i></span>
-          <h3 class="banner-title text-u-c text-center">Top Hotel Destinations</h3>
+        <div class="top-banner hotels"><span class="block text-center m-b-sm m-t-md"><i class="ico ico-mobile ico-flight-md m-t-xs"></i></span>
+          <h3 class="banner-title text-u-c text-center">Great Value Fares</h3>
           <h5 class="subtitle text-u-c text-center">Why Book with sapta Tours?</h5>
         </div>
         <div class="featured-destination-list">
           <div class="item pos-rlt b-b">
-            <figure class="pos-abt"><img src="img/destinations/Kilamanjaru.jpg" alt=""/></figure>
+            <figure class="pos-abt"><img src="img/destinations/Bali01.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Surabaya</h4><span class="inline count-accomodations">125</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Jakarta to Osaka</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Tokyo.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Tokyo</h4><span class="inline count-accomodations">185</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Tokyo</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Bali-02.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Bali</h4><span class="inline count-accomodations">205</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Bali</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Singapore.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Singapore</h4><span class="inline count-accomodations">145</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Singapore</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Hongkong.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Hongkong</h4><span class="inline count-accomodations">85</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Hongkong</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/london.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">London</h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">London</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
           <div class="item pos-rlt b-b">
             <figure class="pos-abt"><img src="img/destinations/Paris.jpg" alt=""/></figure>
             <div class="featured-info pos-abt">
-              <h4 class="name text-lg">Paris</h4><span class="inline count-accomodations">105</span><span class="inline">&nbsp;Accomodations</span>
+              <h4 class="name text-lg">Paris</h4><span class="inline count-accomodations">Economy Return</span><span class="pricing-flight block pos-abt">
+                <label class="text-xs">From</label><span class="pricing block f-bold"><span class="currency"></span><span class="price text-lg"><span class="pricing block f-bold"><span class="currency">$</span><span class="price text-lg">800</span></span></span></span></span>
             </div>
           </div>
         </div>
