--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -27,7 +27,7 @@
       <div class="m-t-sm">
         <ul class="table-view main-menu">
           <li class="table-view-cell"><a href="/mobile/tours.html"><i class="ico ico-tours"></i><span class="inline">Tours</span></a></li>
-          <li class="table-view-cell active"><a href="/mobile/hotels.html"><i class="ico ico-flight"></i><span class="inline">Flight</span></a></li>
+          <li class="table-view-cell active"><a href="/mobile/flights.html"><i class="ico ico-flight"></i><span class="inline">Flight</span></a></li>
           <li class="table-view-cell"><a href="/mobile/hotels.html"><i class="ico ico-hotel"></i><span class="inline">Hotels</span></a></li>
           <li class="table-view-cell"><a href="/mobile/document.html"><i class="ico ico-document"></i><span class="inline">Visa &amp; Passport</span></a></li>
           <li class="table-view-cell"><a href="/mobile/blog.html"><i class="ico ico-blog"></i><span class="inline">Blog</span></a></li>
@@ -52,9 +52,9 @@
       </header>
       <div class="menu-bar">
         <ul class="list-unstyled text-u-c">
-          <li><a href="#"><i class="ico ico-tours"></i><span class="block">Find Tour</span></a></li>
-          <li class="b-r b-l"><a href="#"><i class="ico ico-flight"></i><span class="block">Find Flight</span></a></li>
-          <li><a href="#"><i class="ico ico-hotel"></i><span class="block">Find Hotel</span></a></li>
+          <li><a href="/mobile/tours.html"><i class="ico ico-tours"></i><span class="block">Find Tour</span></a></li>
+          <li class="b-r b-l"><a href="/mobile/flights.html"><i class="ico ico-flight"></i><span class="block">Find Flight</span></a></li>
+          <li><a href="/mobile/hotels.html"><i class="ico ico-hotel"></i><span class="block">Find Hotel</span></a></li>
         </ul>
         <div class="clearfix"></div>
       </div>
