--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -52,9 +52,9 @@
       </header>
       <div class="menu-bar">
         <ul class="list-unstyled text-u-c">
-          <li><a href="/mobile/tours.html"><i class="ico ico-tours"></i><span class="block">Find Tour</span></a></li>
-          <li class="b-r b-l"><a href="/mobile/flights.html"><i class="ico ico-flight"></i><span class="block">Find Flight</span></a></li>
-          <li><a href="/mobile/hotels.html"><i class="ico ico-hotel"></i><span class="block">Find Hotel</span></a></li>
+          <li><a href="/mobile/find-tours.html"><i class="ico ico-tours"></i><span class="block">Find Tour</span></a></li>
+          <li class="b-r b-l"><a href="/mobile/find-flights.html"><i class="ico ico-flight"></i><span class="block">Find Flight</span></a></li>
+          <li><a href="/mobile/find-hotels.html"><i class="ico ico-hotel"></i><span class="block">Find Hotel</span></a></li>
         </ul>
         <div class="clearfix"></div>
       </div>
