--- a/app/mobile/find-hotels.html
+++ b/app/mobile/find-hotels.html
@@ -19,10 +19,10 @@
   <body class="mobile">
     <div id="container">
       <div id="main-wrap" class="form-pencarian pos-rlt">
-        <form id="formFindHotels" method="GET" action="hotels-search.html" class="form-find sapta-form">
-          <h4 class="text-u-c title-search text-center m-b-lg">Find Flights<span class="close"></span></h4>
+        <form id="formFindHotels" method="GET" action="hotel-search.html" class="form-find sapta-form">
+          <h4 class="text-u-c title-search text-center m-b-lg">Find Hotels<span class="close"></span></h4>
           <div class="form-group">
-            <div class="boxing flight-from selectbox b m-b-sm pos-rlt">
+            <div class="boxing selectbox b m-b-sm pos-rlt">
               <label class="block text-xs">Search Hotels In</label>
               <select name="location" class="block">
                 <option selected="selected">Jakarta</option>
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="form-group">
-            <div class="boxing flight-to selectbox b m-b-sm pos-rlt">
+            <div class="boxing selectbox b m-b-sm pos-rlt">
               <label class="block text-xs">Duration</label>
               <select name="nationality" class="block">
                 <option value="1">1 Nights</option>
@@ -55,7 +55,7 @@
             <div class="clearfix"></div>
           </div>
           <div class="form-group">
-            <div class="pull-right text-right checkbox-date">
+            <div class="pull-right text-right checkout-date">
               <label class="f-bold">Check Out:&nbsp;</label><span class="day-date">Minggu, 02 Jan 2015</span>
             </div>
             <div class="clearfix"></div>
