--- a/app/mobile/find-hotels.html
+++ b/app/mobile/find-hotels.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="Tukansclicing">
     <link rel="icon" href="favicon.ico">
@@ -19,7 +19,7 @@
   <body class="mobile">
     <div id="container">
       <div id="main-wrap" class="form-pencarian pos-rlt">
-        <form id="formFindHotels" method="GET" action="hotel-search.html" class="form-find sapta-form">
+        <form id="formFindHotels" method="GET" action="mobile/hotel-search.html" class="form-find sapta-form">
           <h4 class="text-u-c title-search text-center m-b-lg">Find Hotels<a href="/mobile" class="close">Close</a></h4>
           <div class="form-group">
             <div class="boxing selectbox b m-b-sm pos-rlt">
