tour details page and fixing typo for others page name

--- a/app/mobile/flight-return-results.html
+++ b/app/mobile/flight-return-results.html
@@ -69,7 +69,7 @@
             </div>
             <div class="clearfix"></div>
           </div>
-          <div class="outbound-flight-selected text-center"><span class="inline">Outbound Flight:&nbsp;</span><span class="inline flight-number f-bold">QZ 818</span><span class="inline separator">|</span><a href="mobile/flight-search.html" class="changes-outbound-flight">Change</a></div>
+          <div class="outbound-flight-selected text-center"><span class="inline">Outbound Flight:&nbsp;</span><span class="inline flight-number f-bold">QZ 818</span><span class="inline separator">|</span><a href="mobile/flight-results.html" class="changes-outbound-flight">Change</a></div>
           <div class="search-criteria-block text-center b-b b-t">
             <div class="trip-location inline f-bold text-14px m-t"><span class="inline departure">Jakarta</span><span class="inline">&nbsp;-&nbsp;</span><span class="inline arrival">Bali</span></div>
             <div class="trip-date"><span>Friday, 12 March 2015</span></div>
@@ -88,7 +88,7 @@
                 <div class="travel-info text-u-c"><span class="inline stops">Direct Flight</span><span>&nbsp; - &nbsp;</span><span class="inline duration f-bold">1 Hour 45 Minutes</span></div>
                 <div class="fare-price"><span class="currency f-bold text-14px">Rp</span><span class="price f-bold text-14px">900,000</span><span class="extra-info">/ person</span></div>
               </div>
-              <div class="clearfix"></div><a href="mobile/flight-return-search.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
+              <div class="clearfix"></div><a href="mobile/flight-return-results.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
             </div>
             <div class="flight-card pos-rlt">
               <figure class="airline-logo pull-left"><img src="img/icon_citilink.png" alt=""></figure>
@@ -103,7 +103,7 @@
                 <div class="travel-info text-u-c pos-rlt"><span class="inline stops">Direct Flight</span><span>&nbsp; - &nbsp;</span><span class="inline duration f-bold">1 Hour 45 Minutes</span><span class="inline extra-info"><i class="ico ico-mobile ico-info-circle"></i></span></div>
                 <div class="fare-price"><span class="currency f-bold text-14px">Rp</span><span class="price f-bold text-14px">900,000</span><span class="extra-info">/ person</span></div>
               </div>
-              <div class="clearfix"></div><a href="mobile/flight-return-search.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
+              <div class="clearfix"></div><a href="mobile/flight-return-results.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
             </div>
             <div class="flight-card pos-rlt">
               <figure class="airline-logo pull-left"><img src="img/icon_airasia.png" alt=""></figure>
@@ -118,7 +118,7 @@
                 <div class="travel-info text-u-c"><span class="inline stops">Direct Flight</span><span>&nbsp; - &nbsp;</span><span class="inline duration f-bold">1 Hour 45 Minutes</span></div>
                 <div class="fare-price"><span class="currency f-bold text-14px">Rp</span><span class="price f-bold text-14px">900,000</span><span class="per-person">/ person</span></div>
               </div>
-              <div class="clearfix"></div><a href="mobile/flight-return-search.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
+              <div class="clearfix"></div><a href="mobile/flight-return-results.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
             </div>
             <div class="flight-card pos-rlt">
               <figure class="airline-logo pull-left"><img src="img/icon_garuda.png" alt=""></figure>
@@ -133,7 +133,7 @@
                 <div class="travel-info text-u-c"><span class="inline stops">Direct Flight</span><span>&nbsp; - &nbsp;</span><span class="inline duration f-bold">1 Hour 45 Minutes</span></div>
                 <div class="fare-price"><span class="currency f-bold text-14px">Rp</span><span class="price f-bold text-14px">900,000</span><span class="extra-info">/ person</span></div>
               </div>
-              <div class="clearfix"></div><a href="mobile/flight-return-search.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
+              <div class="clearfix"></div><a href="mobile/flight-return-results.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
             </div>
             <div class="flight-card pos-rlt">
               <figure class="airline-logo pull-left"><img src="img/icon_lion.png" alt=""></figure>
@@ -148,7 +148,7 @@
                 <div class="travel-info text-u-c"><span class="inline stops">Direct Flight</span><span>&nbsp; - &nbsp;</span><span class="inline duration f-bold">1 Hour 45 Minutes</span></div>
                 <div class="fare-price"><span class="currency f-bold text-14px">Rp</span><span class="price f-bold text-14px">900,000</span><span class="extra-info">/ person</span></div>
               </div>
-              <div class="clearfix"></div><a href="mobile/flight-return-search.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
+              <div class="clearfix"></div><a href="mobile/flight-return-results.html" class="pos-abt book-btn-sm btn-yellow">BOOK</a>
             </div>
           </div>
         </div>
