--- a/app/mobile/find-hotels.html
+++ b/app/mobile/find-hotels.html
@@ -19,7 +19,7 @@
   <body class="mobile">
     <div id="container">
       <div id="main-wrap" class="form-pencarian pos-rlt">
-        <form id="formFindHotels" method="GET" action="mobile/hotel-search.html" class="form-find sapta-form">
+        <form id="formFindHotels" method="GET" action="mobile/hotel-results.html" class="form-find sapta-form">
           <h4 class="text-u-c title-search text-center m-b-lg">Find Hotels<a href="/mobile" class="close">Close</a></h4>
           <div class="form-group">
             <div class="boxing selectbox b m-b-sm pos-rlt">
