tour booking page and thank you page for booking tour

--- a/app/mobile/tour-detail.html
+++ b/app/mobile/tour-detail.html
@@ -204,27 +204,27 @@
                   <li class="pos-rlt">
                     <div class="date-travel f-bold text-14px">25 Feb -15 Mar 2015</div>
                     <div class="airline">Singapore Airlines</div>
-                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="tour-booking.html" class="book-btn">BOOK</a>
+                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="mobile/tour-booking.html" class="book-btn">BOOK</a>
                   </li>
                   <li class="pos-rlt">
                     <div class="date-travel f-bold text-14px">25 Feb -15 Mar 2015</div>
                     <div class="airline">Singapore Airlines</div>
-                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="tour-booking.html" class="book-btn">BOOK</a>
+                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="mobile/tour-booking.html" class="book-btn">BOOK</a>
                   </li>
                   <li class="pos-rlt">
                     <div class="date-travel f-bold text-14px">25 Feb -15 Mar 2015</div>
                     <div class="airline">Singapore Airlines</div>
-                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="tour-booking.html" class="book-btn">BOOK</a>
+                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="mobile/tour-booking.html" class="book-btn">BOOK</a>
                   </li>
                   <li class="pos-rlt">
                     <div class="date-travel f-bold text-14px">25 Feb -15 Mar 2015</div>
                     <div class="airline">Singapore Airlines</div>
-                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="tour-booking.html" class="book-btn">BOOK</a>
+                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="mobile/tour-booking.html" class="book-btn">BOOK</a>
                   </li>
                   <li class="pos-rlt">
                     <div class="date-travel f-bold text-14px">25 Feb -15 Mar 2015</div>
                     <div class="airline">Singapore Airlines</div>
-                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="tour-booking.html" class="book-btn">BOOK</a>
+                    <div class="pricing"><span class="currency inline m-r-xs text-primary">USD</span><span class="currency inline m-r-xs text-primary">3000</span><span class="label">/ person</span></div><a href="mobile/tour-booking.html" class="book-btn">BOOK</a>
                   </li>
                 </ul>
               </div>
