--- a/app/mobile/flight-booking-1.html
+++ b/app/mobile/flight-booking-1.html
@@ -63,7 +63,7 @@
           <div class="flight-booking-header b-b">
             <div class="tour-title f-bold text-14px">Jakarta (CGK) - Denpasar (DPS)</div><a href="#" class="text-orange">Detail Pemesanan</a>
           </div>
-          <form id="flightBookingStep1" method="GET" action="mobile/tour-booking-thankyou.html" class="sapta-form">
+          <form id="flightBookingStep1" method="GET" action="mobile/flight-booking-2.html" class="sapta-form">
             <div class="flight-booking-progress step-1"><span class="current">Details</span><span>Review</span><span>Payment</span><span>Ticket</span></div>
             <div class="account-login text-center"><span class="block text-14px text-u-c f-bold m-b">Already Have An account?</span>
               <div class="block"><a href="#login" class="btn-login">Login</a><a href="#fb-login" id="FbLogin" class="btn-fb-login">Login with Facebook</a></div>
