booking payment step 2 for hotel

--- a/app/hotel-payment-step-3.html
+++ b/app/hotel-payment-step-3.html
@@ -178,7 +178,7 @@
           </ul>
           <ul class="list-unstyled hotel-booking-summary m-t-lg">
             <li>
-              <div class="block bg-white text-center"><span class="block text-md text-center m-b-xs">Pan Pacific Nirwana Resort Bali</span><span class="block"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span></div>
+              <div class="block bg-white text-center"><span class="block text-md text-center m-b-xs">Pan Pacific Nirwana Resort Bali</span><span class="block bg-white"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i></span></div>
             </li>
             <li class="bg-light">
               <div class="block m-t-sm"><img src="img/destinations/room02.jpg" width="122" height="122" class="m-auto block"><span class="block f-bold m-t-sm text-center">Twin Room Standard</span></div>
